public/style/main.css
@font-face {
  font-family: "Gilroy";
  src: url("../fonts/Gilroy/Gilroy-Reg.desktop-navar.woff") format("woff");
  font-weight: 300;
}
@font-face {
  font-family: "Gilroy";
  src: url("../fonts/Gilroy/Gilroy-Medium.woff") format("woff");
  font-weight: 500;
}
@font-face {
  font-family: "Gilroy";
  src: url("../fonts/Gilroy/Gilroy-Bold.woff") format("woff");
  font-weight: 700;
}
@font-face {
  font-family: "Gilroy";
  src: url("../fonts/Gilroy/Gilroy-Bold.woff") format("woff");
  font-weight: 900;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font-family: "Gilroy", sans-serif;
  background-image: url("../images/blog-bg.png");
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

h2,
h3 {
  margin-bottom: 1rem;
}
@media only screen and (max-width: 480px) {
  h2,
  h3 {
    font-size: 1.5rem;
  }
  p {
    font-size: 1rem;
  }
}
.post-content{
  max-width: 100%;
  word-wrap: break-word;
  overflow-wrap: break-word;
  white-space: pre-line;
}
.section-title {
  width: 90%;
  margin: 4rem 0;
  text-align: left;
  font-weight: 400;
  letter-spacing: 0.5rem;
  font-size: 3rem;
  float: left;
  text-decoration: #797a71 wavy underline;
}
@media only screen and (max-width: 480px) {
  .section-title {
    font-size: 2rem;
    padding: 3rem;
    padding-left: 0;
    font-weight: 700;
    width: 90vw;
  }
  .form-title {
    width: 90vw !important;
  }
}
label {
  font-size: 1.2rem;
  color: black;
  background-color: white;
  width: 70px;
  height: 70px;
  border-radius: 50%;
  text-align: center;
  line-height: 70px;
}

input:not(:last-of-type),
textarea {
  border: none;
  padding: 0.2rem;
  opacity: 0.7;
  border-radius: 0.5rem;
  font-size: 1rem;
  color: black;
  width: 100%;
}
input:focus,
textarea:focus {
  outline: none;
}
input[type="submit"] {
  border: none;
  font-size: 1rem;
  width: 6rem;
  border-radius: 1rem;
  background-color: #797a71;
  color: white;
}
input[type="submit"]:hover {
  cursor: pointer;
  background-color: #c1ae95;
  transition: all 0.5s ease-in;
}
.cancel-btn{
  height: 50px;
  width: 6rem;
  font-size: 1rem;
  border-radius: 1rem;
  background-color: white;
  color: #797a71;
  text-align: center;
  padding: 0;
  line-height: 50px;
}
.cancel-btn:hover{
  background-color: #c1ae95;
  color: white;
  border: none;
  transition: all 0.5s ease-in;
}
.form-container form {
  display: flex;
  flex-direction: column;
  width: 70vw;
  gap: 2rem;
  border: 5px solid #797a71;
  padding: 2rem;
  margin-bottom: 10rem;
  border-radius: 2rem;
}
@media only screen and (max-width: 480px) {
  .form-container form{
    width: 90vw;
  }
}
.form-title {
  width: 70vw;
}
input {
  height: 50px;
  border: none;
  font-size: 2rem;
}
textarea {
  height: 200px;
}

footer {
  display: flex;
  margin-top: 100px;
  height: 50px;
  justify-content: center;
  align-items: center;
  position: absolute;
  width: 100%;
  bottom: 0;
  color: white;
  font-size: 1.2rem;
  background-color: #797a71;
}
/* Navigation */
nav {
  display: flex;
  justify-content: center;
}
@media only screen and (max-width: 480px) {
   nav{
    padding-bottom: 7rem;
   }
}
.desktop-nav {
  display: flex;
  flex-direction: row;
  align-items: center;
  transition: all 1s ease-in-out;
  height: 80px;
  border-radius: 4rem;
  margin: 2rem 0;
}

.mobile-nav {
  position: fixed; /* Keep ul positioned absolutely */
  top: 0;
  left: 0;
  margin: 0;
  background: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100vw;
  gap: 1rem;
  z-index: 500; /* Lower z-index to stay behind the icons */
  transform: translateX(100%);
  transition: transform 0.3s ease-in-out;
}
.mobile-nav.show {
  transform: translateX(0);
}
/* animate nav menu icon */
.nav-icon {
  width: 10vw;
  z-index: 10000; /* Higher z-index to stay on top */
  position: absolute; /* Use absolute positioning for icons */
  right: 1rem; /* Position icons on the right side */
  top: 1rem; /* Slight padding from top */
  cursor: pointer; /* Change cursor to pointer */
}
.nav-icon i {
  background-color: bisque;
  border-radius: 2px;
  content: "";
  display: block;
  width: 100%;
  height: 4px;
}
.nav-icon i:nth-child(1) {
  -webkit-animation: outT 0.8s backwards;
  animation: outT 0.8s backwards;
  -webkit-animation-direction: reverse;
  animation-direction: reverse;
}
.nav-icon i:nth-child(2) {
  margin: 5px 0;
  -webkit-animation: outM 0.8s backwards;
  animation: outM 0.8s backwards;
  -webkit-animation-direction: reverse;
  animation-direction: reverse;
}
.nav-icon i:nth-child(3) {
  -webkit-animation: outBtm 0.8s backwards;
  animation: outBtm 0.8s backwards;
  -webkit-animation-direction: reverse;
  animation-direction: reverse;
}

.nav-icon.active i:nth-child(1) {
  -webkit-animation: inT 0.8s forwards;
  animation: inT 0.8s forwards;
}
.nav-icon.active i:nth-child(2) {
  -webkit-animation: inM 0.8s forwards;
  animation: inM 0.8s forwards;
}
.nav-icon.active i:nth-child(3) {
  -webkit-animation: inBtm 0.8s forwards;
  animation: inBtm 0.8s forwards;
}
/* animated nav icon */
@-webkit-keyframes inM {
  50% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(45deg);
  }
}

@keyframes inM {
  50% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(45deg);
  }
}

@-webkit-keyframes outM {
  50% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(45deg);
  }
}

@keyframes outM {
  50% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(45deg);
  }
}

@-webkit-keyframes inT {
  0% {
    -webkit-transform: translateY(0px) rotate(0deg);
  }
  50% {
    -webkit-transform: translateY(9px) rotate(0deg);
  }
  100% {
    -webkit-transform: translateY(9px) rotate(135deg);
  }
}

@keyframes inT {
  0% {
    transform: translateY(0px) rotate(0deg);
  }
  50% {
    transform: translateY(9px) rotate(0deg);
  }
  100% {
    transform: translateY(9px) rotate(135deg);
  }
}

@-webkit-keyframes outT {
  0% {
    -webkit-transform: translateY(0px) rotate(0deg);
  }
  50% {
    -webkit-transform: translateY(9px) rotate(0deg);
  }
  100% {
    -webkit-transform: translateY(9px) rotate(135deg);
  }
}

@keyframes outT {
  0% {
    transform: translateY(0px) rotate(0deg);
  }
  50% {
    transform: translateY(9px) rotate(0deg);
  }
  100% {
    transform: translateY(9px) rotate(135deg);
  }
}

@-webkit-keyframes inBtm {
  0% {
    -webkit-transform: translateY(0px) rotate(0deg);
  }
  50% {
    -webkit-transform: translateY(-9px) rotate(0deg);
  }
  100% {
    -webkit-transform: translateY(-9px) rotate(135deg);
  }
}

@keyframes inBtm {
  0% {
    transform: translateY(0px) rotate(0deg);
  }
  50% {
    transform: translateY(-9px) rotate(0deg);
  }
  100% {
    transform: translateY(-9px) rotate(135deg);
  }
}

@-webkit-keyframes outBtm {
  0% {
    -webkit-transform: translateY(0px) rotate(0deg);
  }
  50% {
    -webkit-transform: translateY(-9px) rotate(0deg);
  }
  100% {
    -webkit-transform: translateY(-9px) rotate(135deg);
  }
}

@keyframes outBtm {
  0% {
    transform: translateY(0px) rotate(0deg);
  }
  50% {
    transform: translateY(-9px) rotate(0deg);
  }
  100% {
    transform: translateY(-9px) rotate(135deg);
  }
}

.hide {
  display: none;
}
#close-menu-bar {
  display: none;
}

a {
  text-decoration: none;
  color: black;
  transition: all 0.5s;
  letter-spacing: 0.17rem;
  font-size: 1.2rem;
  padding: 0.8rem 0;
}
.active-link {
  border-bottom: 1px solid white;
}
@media only screen and (max-width: 480px) {
  .nav-icon {
    display: block;
  }
  .desktop-nav {
    display: none;
  }
  #open-menu-bar {
    display: block;
  }
  a {
    font-size: 2rem;
  }
  .active-link {
    border-bottom: 0.2rem solid beige;
  }
}
.sticky {
  position: fixed;
  top: 0;
  background-color: #797a71;
  transition: all 1s;
  z-index: 100000;
}
.desktop-nav li,
.mobile-nav li {
  list-style: none;
  padding: 2rem;
}
.nav-link:hover {
  border-radius: 0.5rem;
  box-shadow: 10px 5px 5px white;
  padding-right: 0.8rem;
}
.create-post-btn {
  padding: 0.8rem 1rem;
  border: 1px solid white;
  border-radius: 1rem;
  transition: all 0.5s;
}
@media only screen and (max-width: 480px) {
  .create-post-btn {
    border: 3px solid bisque;
  }
  .nav-link:hover {
    border-radius: 0.5rem;
    box-shadow: 10px 5px 5px bisque;
    padding-right: 0.8rem;
  }
}
.create-post-btn:hover {
  color: white;
}
.post-display-message {
  padding: 2rem;
  color: grey;
}

.posts-wrapper,
.form-wrapper,
.post-wrapper
 {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.post-wrapper{
margin-top: 3rem;
}
.form-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.posts-container {
  display: grid;
  grid-template-columns: repeat(3, 25%);
  grid-row-gap: 8rem;
  justify-content: space-between;
  padding-bottom: 10rem;
}
@media only screen and (max-width: 480px) {
  .posts-container {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    margin-bottom: 10rem;
  }
}
.posts-container,
.form-container {
  width: 90%;
}
.post-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  box-shadow: 0 0 10px #c3c2c0;
  border-radius: 10px;
  padding: 3rem 0 0 2rem;
  background-color: #c1ae95;
  transition: all 0.2s ease-in-out;
  border: 0 solid transparent;
  height: 300px;
}
@media only screen and (max-width: 480px) {
  .post-container {
    height: auto;
  }
}
.post-container:hover {
  border: 6px solid whitesmoke;
  cursor: pointer;
}
.post, .post-edit {
  display: flex;
  width: 70vw;
  flex-direction: column;
  background-color: white;
  padding: 2rem;
  margin-bottom: 10rem;
  color: black;
  border-radius: 2rem;
  min-height: 600px;
  height: auto;
  justify-content: space-between;
}
.post-edit{
  justify-content: center;
}
.post-edit label{
  text-align: left;
}
.post-edit form{
  display: flex;
  flex-direction: column;
}
@media only screen and (max-width: 480px) {
  .post {
    width: 90%;
  }
}
.btn-container {
  display: flex;
  flex-direction: row;
  gap: 1rem;
  margin-top: 2rem;
}
button {
  background-color: #199319;
  color: white;
  padding: 10px 20px;
  text-decoration: none;
  border-radius: 10px;
  transition: all 0.5s;
}
button:hover {
  cursor: pointer;
  padding: 15px 25px;
  color: #199319;
  background-color: white;
}
.post-metadata {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 2rem 0 1rem 0rem;
}
.post-metadata p{
  opacity: 0.5;
}
@media only screen and (max-width: 480px) {
  .post-metadata {
    font-size: 0.8rem;
  }
}

